# GSMMutils

./: .gitignore  README.md  README.rst  custom  optimized_parameters.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tINIT_test.lp  tox.ini
.github/workflows/: ci.yaml
.ipynb_checkpoints/: ExpAlgae-checkpoint.ipynb
config/: server_connection.json  troppo_light.json  troppo_nacl.json
config/annotation/: Dockerfile
config/optimization/: Dockerfile
examples/: ExpAlgae.ipynb  Ngaditana.ipynb  Pgyrans.ipynb  Plutheri.ipynb  QY&AQ - Populus.py  Untitled.ipynb  Untitled1.ipynb  concentrations_1.csv  concentrations_10.csv  concentrations_11.csv  concentrations_12.csv  concentrations_15.csv  concentrations_18.csv  concentrations_23.csv  concentrations_4.csv  concentrations_8.csv  concentrations_Xi_cont_S.csv  concentrations_Yimei_HL.csv  concentrations_Yimei_N-.csv  concentrations_fachet_HL.csv  create_dfba_model.py  dae.py  data_analysis.py  dynamic_expressions_analysis.ipynb  experimental_data_analysis.ipynb  experimental_data_anaçysis.ipynb  fame2biomass.py  fame2biomass_plutheri.py  filter_lipids_by_biomass.py  genome_annotation.py  light_evaluation.ipynb  media_optimization.ipynb  merge_compartments_annotation.py  ngaditana_boimmg.ipynb  old_test_Biomass.py  old_test_all.py  old_test_dfba.py  old_test_light.py  old_test_omics.py  old_test_stats.py  (+25 more)
src/bio/: gene.py  (+1 more)
test/: ExpAlgae.ipynb  blocked_reactions.txt  data_analysis.py  sbc.csv  test_Biomass.py  test_all.py  test_dfba.py  test_light.py  test_omics.py  test_validation.py
(+292 files in other folders)
