[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[metadata]
name = gsmmutils
author = Emanuel Cunha
author_email = ecunha@ceb.uminho.pt
description = Genome Scale Metabolic Model Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecunha1996/GSMMutils.git
project_urls =
	Bug Tracker =
	Documentation =
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
keywords =
	metabolism
	biology
	constraint-based
	flux-balance analysis

[options]
zip_safe = True
install_requires =
    cobra
    numpy
    pandas

tests_require =
	tox
	cplex
packages = find:
package_dir =
	= src

[options.package_data]
gsmmutils =
	model/data/*
* = *.xml, *.csv, *.txt

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/mewpy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 120
exclude = __init__.py,docs

[aliases]
test = pytest